# coding_exercises

./: .gitignore  CloneGraph.java  KeysAndRooms.java  README.md  SingletonExample.java  StackExample.java  UnitTestingExample.java  climbing_stair.java  course_schedule.java  diff_two_arrays.java  exercises.sql  file.txt  isomorphic_string.py  last_stone_weight.java  majority_element.py  max_depth_binary_tree.java  palindrome.java  python_script.py  sign_product.java  two_sum.java
cpp_exercises/cmake/: CMakeLists.txt
cpp_exercises/cmake/headers_libraries/: math.h
cpp_exercises/cmake/src/: file1.cpp  file2.cpp  file3.cpp  hello_world.h  main.cpp
graphs/: CloneGraph.java  KeysAndRooms.java
java/: UnitTestingExample.java  climbing_stair.java  course_schedule.java  diff_two_arrays.java  last_stone_weight.java  palindrome.java  sign_product.java  two_sum.java
java_exercises/: StackExample.java  SumOfPairs.java  UnitTestingExample.java  climbing_stair.java  course_schedule.java  diff_two_arrays.java  last_stone_weight.java  palindrome.java  sign_product.java  two_sum.java
polimorphism/: BaseClass.java  Child1.java  Child2.java  MainClass.java
python/: average-salary-excluding-the-minimum-and-maximum-salary.py  binary_search.py  majority_element.py  max_area.py  max_subseq_using_transformations.py  number_of_provinces.py  search_2d_matrix.py  singleton.py  valid_parenthesis.py  zig_zag_tree.py
sql/: exercises_cracking_the_code_interview.sql  local_postgres.setup.sql
threading/: ThreadExample.java
trees/: Bipartition.java  MaxPerLevel.java  PathSum.java  (+2 more)
(+120 files in other folders)
